...
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add"
            app:tint="#FFFFFF" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listViewTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />
</LinearLayout>
